--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "webpack": "^5.89.0"
   },
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
     "webpack-cli": "^5.1.4"
   }
 }
